--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,12 @@
         "complex": "cpp",
         "list": "cpp",
         "cfenv": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "*.ipp": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp",
+        "codecvt": "cpp",
+        "forward_list": "cpp",
+        "unordered_set": "cpp"
     }
 }
