--- a/lib/jimple-parser/CMakeLists.txt
+++ b/lib/jimple-parser/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(lexer lexer.cpp)
 target_link_libraries(lexer PUBLIC spdlog::spdlog)
-target_compile_features(lexer PRIVATE cxx_std_17)
+target_compile_features(lexer PUBLIC cxx_std_17)
 add_library(jimple_declaration jimple_declaration.cpp)
