--- a/test/property/CMakeLists.txt
+++ b/test/property/CMakeLists.txt
@@ -4,7 +4,7 @@ function (new_property_test TARGET SRC LIBS)
   add_executable(${TARGET} ${SRC})
   target_link_libraries(${TARGET} PRIVATE ${LIBS} ${PROPERTY_TEST_LIB})
   target_compile_features(${TARGET} PRIVATE cxx_std_17)
-  add_test(NAME ${TARGET}-PRP COMMAND ${TARGET})
+  add_test(NAME PRP-${TARGET} COMMAND ${TARGET})
 endfunction()
 
 new_property_test("rapid" "rapidcheck.cpp" "")
