--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                jimple
 version:             0.1.0.0
-github:              "githubuser/jimple"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2021 Author name here"
+github:              "rafaelsamenezes/jimple_parser"
+license:             MIT
+author:              "Rafael Sá Menezes"
+maintainer:          "rafael.sa.menezes@outlook.com"
+copyright:           "2021 Rafael Sá Menezes"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/jimple#readme>
+description:         Please see the README on GitHub at <https://github.com/rafaelsamenezes/jimple_parser#readme>
 
 dependencies:
 - base >= 4.7 && < 5
