--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -13,9 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-haskell@v1
+    - uses: haskell/actions/setup@v1
       with:
         ghc-version: '8.10.3'
+        enable-stack: true
+        stack-version: 'latest'
         cabal-version: '3.2'
 
     - name: Cache
@@ -31,10 +33,8 @@ jobs:
           ${{ runner.os }}-
 
     - name: Install dependencies
-      run: |
-        cabal update
-        cabal build --only-dependencies --enable-tests --enable-benchmarks
+      run: stack setup
     - name: Build
-      run: cabal build --enable-tests --enable-benchmarks all
+      run: stack build
     - name: Run tests
-      run: cabal test all
+      run: stack test
