--- a/jimple.cabal
+++ b/jimple.cabal
@@ -27,9 +27,9 @@ library
   exposed-modules:
       Ast
       Lexer
-      Lib
       Parser
       ToJson
+      Utils
   other-modules:
       Paths_jimple
   hs-source-dirs:
@@ -48,12 +48,9 @@ executable jimple-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
-    , haskeline
     , jimple
-    , mtl
   default-language: Haskell2010
 
 test-suite jimple-test
@@ -65,12 +62,9 @@ test-suite jimple-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
-    , haskeline
     , jimple
-    , mtl
     , tasty
     , tasty-hunit
     , tasty-quickcheck
