added artifact release

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -36,5 +36,16 @@ jobs:
       run: stack setup
     - name: Build
       run: stack build
-    - name: Run tests
-      run: stack test
+      
+    - name: Package Jimple2Json
+        shell: bash
+        run: |
+          mkdir package
+          dir=$(stack path --dist-dir)/build/jimple-exe
+          cp $dir/jimple-exe package/jimple2json
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: jimple2json
+        path: package
