--- a/jimple2json.cabal
+++ b/jimple2json.cabal
@@ -58,7 +58,7 @@ executable jimple-exe
   build-depends:
       base >=4.7 && <5
     , bytestring
-    , jimple
+    , jimple2json
   default-language: Haskell2010
 
 test-suite jimple-test
@@ -72,7 +72,7 @@ test-suite jimple-test
   build-depends:
       base >=4.7 && <5
     , bytestring
-    , jimple
+    , jimple2json
     , tasty
     , tasty-hunit
     , tasty-quickcheck
